<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/lightgrey"/>
        <ImageButton
            android:id="@+id/selectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:src="@drawable/calendar_grey"
            android:background="@android:color/transparent"/>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/calendar_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:clickable="true"
        android:src="@drawable/summer"/>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            app:mcv_tileHeight="48dp"
            app:mcv_headerTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:mcv_dateTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:mcv_weekDayTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:mcv_showOtherDates="other_months"
            app:layout_behavior="@string/calendar_behavior"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="110dp"
            android:background="#ffffff"
            app:layout_behavior="@string/calendar_scrolling_behavior"/>

        <com.southernbox.nestedcalendar.view.WeekTitleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginLeft="@dimen/md_title_textsize"
            android:layout_marginRight="@dimen/md_title_textsize"
            />


    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>
